--- a/index.html
+++ b/index.html
@@ -1,37 +1,107 @@
-<!DOCTYPE html> 
-<html>
-<head>
-	<meta charset="utf-8">
-	<title> Webpage of Rafael Galleze </title>
-	<link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-	<h1> Personal Webpage of 
-	Rafael Galleze </h1>
-	<div class="img-area">
-		<img class = "avi" src="img/avi.jpeg" alt = "AVI">
-	</div>
-	<div class="txt-area">
-		<article><p> I am a french student from the University of Bordeaux. I graduated from the Master's degree "Mathematics and applications - Analysis, PDE, Probability". My interests lie towards PDEs, calculus of variations, fluid dynamics and fundamental physics.</p>
-		<P> You can contact me at rafael.galleze(at)etu.u-bordeaux(dot)fr or you can solve 2&radic;x = 51046.29256 for my phone number (+33).</span></p>
-	</div>
-	<hr class = "clear">
-	<div class="documents">
-	<h3> Documents </h3>
-	<ul>
-		<li> <a href = "pdf/Cv.pdf">Curriculum Vitae (in french)<a/> </li>
-			<ul>
-				<li> <a href = "pdf/Formation.pdf">Details on the followed courses (in french)<a/> </li>
-			</ul>
-	</ul>
-
-
-	<ul>
-		<li> Internship's Theses </li>
-			<ul>
-				<li> <a href="pdf/Memoire.pdf"> M2 Internship's Thesis (under the direction of Mathieu Colin)</a> </li>
-			</ul>
-	</ul>
-	<br>
+  <h1>Personal Webpage of Rafael Galleze</h1>
+  <div class="img-area"> <img class="avi" src="img/avi.jpeg" alt="AVI"> </div>
+  <div class="txt-area">
+    <article>
+      <p>I am a French student from the University of Bordeaux. I graduated from the Master's degree "Mathematics and Applications - Analysis, PDE, Probability". My interests lie in PDEs, calculus of variations, fluid dynamics, and fundamental physics.</p>
+      <P>You can contact me at rafael.galleze(at)etu.u-bordeaux(dot)fr or you can solve 2&radic;x = 51046.29256 for my phone number (+33).</p>
+    </article>
+  </div>
+  <div class="contact-info"> <a href="mailto:rafael.galleze@etu.u-bordeaux.fr">Email</a> </div>
+  <div class="documents">
+    <h3>Documents</h3>
+    <ul>
+      <li><a href="pdf/Cv.pdf">Curriculum Vitae (in French)</a>
+        <ul>
+          <li><a href="pdf/Formation.pdf">Details on the followed courses (in French)</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul>
+      <li>Internship's Theses</li>
+      <ul>
+        <li><a href="pdf/Memoire.pdf"> M2 Internship's Thesis (under the direction of Mathieu Colin)</a></li>
+      </ul>
+    </ul>
+  </div>
 </body>
+
 </html>
+
+
+
+
+
+
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+
+    h1 {
+        font-size: 30px;
+        text-align: center;
+        color: #333;
+        padding-top: 20px;
+    }
+
+    .img-area {
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    .avi {
+        width: 200px;
+        border-radius: 50%;
+    }
+
+    .txt-area {
+        margin: 50px auto;
+        max-width: 600px;
+    }
+
+    .txt-area p {
+        line-height: 1.5;
+    }
+
+    .contact-info {
+        margin-top: 30px;
+        text-align: center;
+    }
+
+    .contact-info a {
+        color: #333;
+        text-decoration: none;
+        margin: 0 10px;
+    }
+
+    .documents {
+        margin-top: 50px;
+        text-align: center;
+    }
+
+    .documents h3 {
+        color: #333;
+        font-size: 24px;
+    }
+
+    .documents ul {
+        margin-top: 20px;
+        padding-left: 0;
+        list-style: none;
+    }
+
+    .documents a {
+        color: #333;
+        text-decoration: none;
+        font-size: 18px;
+    }
+
+    .documents ul ul {
+        margin-top: 10px;
+    }
+</style>
