--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <body>
   <h1>Personal Webpage of Rafael Galleze</h1>
-  <div class="img-area"> <img class="avi" src="img/avi.jpeg" alt="AVI"> </div>
+  <div class="img-area"> 
+    <img src="./img/avi.jpg" alt="image_description"> 
+  </div>
   <div class="txt-area">
     <article>
       <p>I am a French student from the University of Bordeaux. I graduated from the Master's degree "Mathematics and Applications - Analysis, PDE, Probability". My interests lie in PDEs, calculus of variations, fluid dynamics, and fundamental physics.</p>
