--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="txt-area">
     <article>
       <p>I am a French student from the University of Bordeaux. I graduated from the Master's degree "Mathematics and Applications - Analysis, PDE, Probability". My interests lie in PDEs, calculus of variations, fluid dynamics, and fundamental physics.</p>
-      <P>You can contact me at rafael.galleze(at)etu.u-bordeaux(dot)fr or you can solve 2&radic;x = 51046.29256 for my phone number (+33).</p>
+      <P>You can contact me at rafael.galleze(at)outlook(dot)com or you you can find my phone number on my CV.</p>
     </article>
   </div>
   <div class="contact-info"> <a href="mailto:rafael.galleze@etu.u-bordeaux.fr">Email</a> </div>
@@ -19,10 +19,13 @@
         <ul>
           <li><a href="pdf/Formation.pdf">Details on the followed courses (in French)</a></li>
         </ul>
+        <ul>
+          <li><a href="pdf/Formation.pdf">Details on the followed courses (in French)</a></li>
+        </ul>
       </li>
     </ul>
     <ul>
-      <li>Internship's Theses</li>
+      <li>Internship's These</li>
       <ul>
         <li><a href="pdf/Memoire.pdf"> M2 Internship's Thesis (under the direction of Mathieu Colin)</a></li>
       </ul>
