--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
       <P>You can contact me at rafael.galleze(at)outlook(dot)com or you you can find my phone number on my CV.</p>
     </article>
   </div>
-  <div class="contact-info"> <a href="mailto:rafael.galleze@etu.u-bordeaux.fr">Email</a> </div>
   <div class="documents">
     <h3>Documents</h3>
     <ul>
-      <li><a href="pdf/Cv.pdf">Curriculum Vitae (in French)</a>
+      <li><a href="pdf/Curriculum Vitae - Rafael Galleze.pdf">Curriculum Vitae (in French)</a>
         <ul>
-          <li><a href="pdf/Formation.pdf">Details on the followed courses (in French)</a></li>
+          <li><a href="pdf/Detailed Training Course - Rafael Galleze.pdf">Details on the followed courses (in French)</a></li>
         </ul>
         <ul>
           <li><a href="pdf/Formation.pdf">Details on the followed courses (in French)</a></li>
@@ -27,7 +26,7 @@
     <ul>
       <li>Internship's These</li>
       <ul>
-        <li><a href="pdf/Memoire.pdf"> M2 Internship's Thesis (under the direction of Mathieu Colin)</a></li>
+        <li><a href="pdf/Galleze - Mémoire de stage.pdf"> M2 Internship's Thesis (under the direction of Mathieu Colin)</a></li>
       </ul>
     </ul>
   </div>
