--- a/index.html
+++ b/index.html
@@ -8,25 +8,22 @@
   <div class="txt-area">
     <article>
       <p>I am a French student from the University of Bordeaux. I graduated from the Master's degree "Mathematics and Applications - Analysis, PDE, Probability". My interests lie in PDEs, calculus of variations, fluid dynamics, and fundamental physics.</p>
-      <P>You can contact me at rafael.galleze(at)outlook(dot)com or you you can find my phone number on my CV.</p>
+      <P>You can contact me at rafael.galleze(at)outlook(dot)com or you you can find my personal informations on my CV.</p>
     </article>
   </div>
   <div class="documents">
     <h3>Documents</h3>
     <ul>
-      <li><a href="pdf/Curriculum Vitae - Rafael Galleze.pdf">Curriculum Vitae (in French)</a>
+      <li><a href="pdf/Curriculum Vitae - Rafael Galleze.pdf">Curriculum Vitae</a>
         <ul>
-          <li><a href="pdf/Detailed Training Course - Rafael Galleze.pdf">Details on the followed courses (in French)</a></li>
-        </ul>
-        <ul>
-          <li><a href="pdf/Formation.pdf">Details on the followed courses (in French)</a></li>
+          <li><a href="pdf/Detailed Training Course - Rafael Galleze.pdf">Details on the training course</a></li>
         </ul>
       </li>
-    </ul>
-    <ul>
-      <li>Internship's These</li>
       <ul>
-        <li><a href="pdf/Galleze - Mémoire de stage.pdf"> M2 Internship's Thesis (under the direction of Mathieu Colin)</a></li>
+        <li><a href="pdf/Galleze - Mémoire de stage.pdf"> M2 Internship's Thesis</a></li>
+      </ul>
+      <ul>
+        <li><a href="pdf/Recommendation letters - Rafael Galleze.pdf"></a></li>
       </ul>
     </ul>
   </div>
