--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Personal Webpage of Rafael Galleze</h1>
   <div class="img-area"> 
-    <img src="./img/oliraf.jpeg" alt="image_description"> 
+    <img src="./img/oliraf.jpeg" alt="picture_website" width="500" height="600"> 
   </div>
   <div class="txt-area">
     <article>
