--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="txt-area">
     <article>
       <p>I am a French student from the University of Bordeaux. I graduated from the Master's degree "Mathematics and Applications - Analysis, PDE, Probability". My interests lie in PDEs, calculus of variations, fluid dynamics, and fundamental physics.</p>
-      <P>You can contact me at rafael.galleze(at)outlook(dot)com or you you can find my personal informations on my CV.</p>
+      <P>You can contact me at rafael.galleze(at)outlook(dot)com or you can find my personal informations on my CV.</p>
     </article>
   </div>
   <div class="documents">
