--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
       <li><a href="pdf/Curriculum Vitae - Rafael Galleze.pdf">Curriculum Vitae</a>
         <ul>
-          <li><a href="pdf/Detailed Training Course - Rafael Galleze.pdf">Details on the training course</a></li>
+          <li><a href="pdf/Detailed Training Course - Rafael Galleze.pdf">Details on my training course</a></li>
         </ul>
       </li>
       <ul>
