--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
       </li>
       <ul>
-        <li><a href="pdf/Galleze - Mémoire de stage.pdf"> M2 Internship's Thesis</a></li>
+        <li><a href="pdf/MastersThesis.pdf"> M2 Internship's Thesis</a></li>
       </ul>
       <ul>
         <li><a href="pdf/Recommendation letters - Rafael Galleze.pdf"></a></li>
